# opencv-demo

./: README.md  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/opencv_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/opencv_demo/: Main2Activity.java  MainActivity.java
app/src/main/java/com/example/opencv_demo/imageprocess/: ImageUtils.java
app/src/main/res/layout/: activity_main.xml  activity_main2.xml
app/src/main/res/values/: strings.xml
